<resources>
    <string name="app_name">DefaultUserName</string>

    <string name="menu_music_toggle">Mute Music</string>
    <string name="menu_new_game_text">New Game</string>
    <string name="menu_end_game_text">End Game</string>

    <string name="start_label_spinner">Select Number of Cards:</string>
    <string name="start_button_spinner">Select</string>
    <string name="start_high_score">High Score</string>

    <string name="game_try_again">Try Again</string>
    <string name="game_score_string">Score:</string>
    
    <string name="dialog_high_score">You have a new high score of: </string>
    <string name="dialog_enter_score">Please enter your initials:</string>
    <string name="dialog_ok">ok</string>
    <string name="dialog_number">0</string>

    <string name="high_score_label">High Scores: </string>

    <string-array name="start_spinner_values">
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
    </string-array>
</resources>
