<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:text="@string/high_score_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/high_score_greeting"
        android:layout_weight="1" />

    <Button
        android:text="@string/start_button_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_button"/>
    <Button
        android:text="@string/start_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/high_score_button"/>


</LinearLayout>