<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <TextView
        android:text="@string/dialog_high_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/high_score_greeting"
        android:layout_weight="1" />
        <TextView
            android:text="@string/dialog_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:id="@+id/high_score_user_score"
            android:layout_weight="1" />
    <TextView
        android:text="@string/dialog_enter_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:id="@+id/high_score_prompt"
        android:layout_weight="1" />
    <EditText
        android:id="@+id/high_score_initials"
        android:inputType="textCapCharacters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxLength="3"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>

</LinearLayout>